[package]
name = "msvc_spectre_libs"
version = "0.1.0"
edition = "2021"
description = """
Provides an easy way to link with the Spectre-mitigated libraries for Windows MSVC targets.
Does nothing for other targets.
"""
build = "build.rs"
keywords = ["spectre", "msvc", "mitigated", "crt"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/microsoft/rust_msvc_spectre_libs"

[build-dependencies]
cc = "1.0"

[features]
# causes an error instead of a warning if the libs are not available
error = []